All new changes made to code

--- a/week1.html
+++ b/week1.html
@@ -33,24 +33,20 @@
     <h1>Week One</h1>
     <div class="container">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu nisl nunc mi ipsum faucibus vitae aliquet nec. Ligula ullamcorper malesuada proin libero nunc consequat interdum varius. Id eu nisl nunc mi ipsum faucibus. Id diam vel quam elementum. Diam vel quam elementum pulvinar. Pellentesque id nibh tortor id aliquet lectus proin. Feugiat nibh sed pulvinar proin gravida. Massa tincidunt dui ut ornare lectus sit amet est. Nisl vel pretium lectus quam id leo in. Eu consequat ac felis donec et odio pellentesque diam. Neque volutpat ac tincidunt vitae semper quis. Porta lorem mollis aliquam ut porttitor leo. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec.
-
+            I had set up Github last year for a group project in Digital Art Design Project. At that time I couldn’t really take the time to learn and understand Github because of the time constraints involved with the group project. However, since seeing that this course will be making use of Github, I decided to hone in on the information I got on the video linked. 
         </p>
-
+<br>
         <p>
-            Nisl pretium fusce id velit ut tortor pretium viverra. At in tellus integer feugiat scelerisque varius morbi. Nec ultrices dui sapien eget mi proin sed libero enim. Ut diam quam nulla porttitor massa. Purus faucibus ornare suspendisse sed nisi lacus sed viverra. Neque viverra justo nec ultrices. Fames ac turpis egestas maecenas pharetra convallis posuere morbi. Risus viverra adipiscing at in. Tristique nulla aliquet enim tortor at auctor urna nunc id. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Tempor orci dapibus ultrices in iaculis. Cras ornare arcu dui vivamus arcu felis. Aenean sed adipiscing diam donec. Faucibus in ornare quam viverra orci sagittis eu. Erat imperdiet sed euismod nisi porta lorem mollis aliquam ut.
-
-
+            I was surprised by the readings we got. I had expected our first readings to have a focus on more current debates surrounding technology. Reading the readings especially As We May Think by Bush, really helped understand that we need to learn from the technology created at that time to understand where technology will be in future. I have to admit, these two readings were a bit overwhelming for me as they had a lot of jargon that didn’t help me understand the general idea of what’s being written. I highlighted the words and phrases I didn’t understand I tried my hardest to interpret what the readings were actually about and how they affect what we know now.
         </p>
-
+<br>
         <p>
 
-            Diam donec adipiscing tristique risus nec feugiat in fermentum. Massa tempor nec feugiat nisl pretium fusce id velit. Natoque penatibus et magnis dis. Sapien faucibus et molestie ac feugiat sed lectus vestibulum mattis. Dui faucibus in ornare quam. Amet facilisis magna etiam tempor orci eu. Malesuada nunc vel risus commodo viverra. Ut aliquam purus sit amet luctus venenatis. Amet commodo nulla facilisi nullam vehicula. Consectetur adipiscing elit pellentesque habitant. Pretium viverra suspendisse potenti nullam ac tortor vitae purus. Egestas erat imperdiet sed euismod. Molestie at elementum eu facilisis sed odio morbi. Risus quis varius quam quisque id diam vel. Luctus venenatis lectus magna fringilla urna porttitor.
+            I tried finding websites I liked to write in this blog, but I could only think about Netflix’s website. There is a clear distinction in usability on the website as opposed to the app. It feels so jarring to watch any type of series on the website. On the app, when you click on the card with the series title and its accompanying image, you’re immediately guided to a pop-up with more information about that series. But on the website, it begins the first episode. This only works for series or movies that you are watching already. There’s really no need to be taken to the info page. It’s quite annoying when you think about it because as the user, that action forces a series to be on the user’s watchlist.
         </p>
+<br>
 
-        <p>
-            Nam at lectus urna duis convallis convallis. Aliquam sem fringilla ut morbi tincidunt augue interdum. Suspendisse interdum consectetur libero id faucibus nisl tincidunt eget nullam. Purus in mollis nunc sed id. Ullamcorper dignissim cras tincidunt lobortis. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque. Ullamcorper malesuada proin libero nunc. Sem integer vitae justo eget magna. Eget dolor morbi non arcu risus quis varius. Volutpat est velit egestas dui id. Placerat duis ultricies lacus sed turpis. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Dolor sed viverra ipsum nunc aliquet bibendum enim. Placerat vestibulum lectus mauris ultrices eros in. A pellentesque sit amet porttitor eget dolor. Egestas erat imperdiet sed euismod nisi. Aenean euismod elementum nisi quis.
-        </p>
+       
 
 
 
