--- a/week2.html
+++ b/week2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zamahayise's Week 1 DevBlog</title>
+    <title>Zamahayise's Week 2 DevBlog</title>
     <link rel="stylesheet" href="devblog.css">
 </head>
 <body>
@@ -32,23 +32,22 @@
     <h1>Week Two</h1>
     <div class="container">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu nisl nunc mi ipsum faucibus vitae aliquet nec. Ligula ullamcorper malesuada proin libero nunc consequat interdum varius. Id eu nisl nunc mi ipsum faucibus. Id diam vel quam elementum. Diam vel quam elementum pulvinar. Pellentesque id nibh tortor id aliquet lectus proin. Feugiat nibh sed pulvinar proin gravida. Massa tincidunt dui ut ornare lectus sit amet est. Nisl vel pretium lectus quam id leo in. Eu consequat ac felis donec et odio pellentesque diam. Neque volutpat ac tincidunt vitae semper quis. Porta lorem mollis aliquam ut porttitor leo. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec.
-
+            I had a bit of some experience with HTML from high school. We were not taught anything intricately nor did we have the creative freedom to do whatever we wanted. It was quite interesting to engage with HTML in a different way than what I am used to.
         </p>
+        <br>
 
         <p>
-            Nisl pretium fusce id velit ut tortor pretium viverra. At in tellus integer feugiat scelerisque varius morbi. Nec ultrices dui sapien eget mi proin sed libero enim. Ut diam quam nulla porttitor massa. Purus faucibus ornare suspendisse sed nisi lacus sed viverra. Neque viverra justo nec ultrices. Fames ac turpis egestas maecenas pharetra convallis posuere morbi. Risus viverra adipiscing at in. Tristique nulla aliquet enim tortor at auctor urna nunc id. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Tempor orci dapibus ultrices in iaculis. Cras ornare arcu dui vivamus arcu felis. Aenean sed adipiscing diam donec. Faucibus in ornare quam viverra orci sagittis eu. Erat imperdiet sed euismod nisi porta lorem mollis aliquam ut.
-
+            The readings were quite hard to understand or comprehend when I first read them. But the second time I did, I understood that “Why You Should Choose HTML5” and “How A Screen Reader User Accesses The Web: A Smashing Video” useability and accessibility within web design is quite important. The way users access information is the most important thing any web developer should keep in mind. For example, changing the exit button a dialog box from the bright red we are all familiar with to a neon pink would be confusing to a user because of the standard they are used to. Another example is information dumping in places where the information is supposed to be succinct and compact. A website that has images that don’t have alt text or does not accept text-to-speech, is a great example of not prioritising all users in the useability spectrum. 
 
         </p>
-
+        <br>
         <p>
 
-            Diam donec adipiscing tristique risus nec feugiat in fermentum. Massa tempor nec feugiat nisl pretium fusce id velit. Natoque penatibus et magnis dis. Sapien faucibus et molestie ac feugiat sed lectus vestibulum mattis. Dui faucibus in ornare quam. Amet facilisis magna etiam tempor orci eu. Malesuada nunc vel risus commodo viverra. Ut aliquam purus sit amet luctus venenatis. Amet commodo nulla facilisi nullam vehicula. Consectetur adipiscing elit pellentesque habitant. Pretium viverra suspendisse potenti nullam ac tortor vitae purus. Egestas erat imperdiet sed euismod. Molestie at elementum eu facilisis sed odio morbi. Risus quis varius quam quisque id diam vel. Luctus venenatis lectus magna fringilla urna porttitor.
+            The internet was quite simplistic in its design and in its use. Internet Histories gives insight into how we moved from the internet in its early years to where we are now. Before, there were multiple devices for different functions. A cell phone to make calls and to send SMSs, a CD player for music, Computer to access the internet and to browse on it. We now use one device for all those functions and more. We can download anything without waiting too long for it be downloaded on our devices. Accessing information is quicker and putting information on the internet is much faster than what we would have imagined in the early days.
         </p>
-
+        <br>
         <p>
-            Nam at lectus urna duis convallis convallis. Aliquam sem fringilla ut morbi tincidunt augue interdum. Suspendisse interdum consectetur libero id faucibus nisl tincidunt eget nullam. Purus in mollis nunc sed id. Ullamcorper dignissim cras tincidunt lobortis. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque. Ullamcorper malesuada proin libero nunc. Sem integer vitae justo eget magna. Eget dolor morbi non arcu risus quis varius. Volutpat est velit egestas dui id. Placerat duis ultricies lacus sed turpis. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Dolor sed viverra ipsum nunc aliquet bibendum enim. Placerat vestibulum lectus mauris ultrices eros in. A pellentesque sit amet porttitor eget dolor. Egestas erat imperdiet sed euismod nisi. Aenean euismod elementum nisi quis.
+            I found out recently that the first software engineer Margaret Hamilton, was the first programmer and she coined the term software engineer. As I looked at the picture of her standing with all of the code she wrote by hand (I am forever impressed by that), it got me even more excited to learn how to programme in HTML and the other languages.
         </p>
 
 
