--- a/week7.html
+++ b/week7.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zamahayise's Week 1 DevBlog</title>
+    <title>Zamahayise's Week 7 DevBlog</title>
     <link rel="stylesheet" href="devblog.css">
 </head>
 <body>
@@ -32,23 +32,27 @@
     <h1>Week Seven</h1>
     <div class="container">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu nisl nunc mi ipsum faucibus vitae aliquet nec. Ligula ullamcorper malesuada proin libero nunc consequat interdum varius. Id eu nisl nunc mi ipsum faucibus. Id diam vel quam elementum. Diam vel quam elementum pulvinar. Pellentesque id nibh tortor id aliquet lectus proin. Feugiat nibh sed pulvinar proin gravida. Massa tincidunt dui ut ornare lectus sit amet est. Nisl vel pretium lectus quam id leo in. Eu consequat ac felis donec et odio pellentesque diam. Neque volutpat ac tincidunt vitae semper quis. Porta lorem mollis aliquam ut porttitor leo. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec.
+            At the last minute I decided to change what my website would be displaying. Though this was my plan B. After reading the additional content relating to the assignment and hearing what was said in the Thursday lecture, I felt surer of my second plan than I di with the music-focused website. I needed to change a few things, namely, my colour palette, and replacing the music section of the website with a portfolio section. Through Thursday’s class I realised that I don’t need to have all the answers for the portfolio. I was acting like I did. I admit, it was a bit dangerous switching up the basis of the website, but it will be worth it in the end.
 
         </p>
-
+<br>
         <p>
-            Nisl pretium fusce id velit ut tortor pretium viverra. At in tellus integer feugiat scelerisque varius morbi. Nec ultrices dui sapien eget mi proin sed libero enim. Ut diam quam nulla porttitor massa. Purus faucibus ornare suspendisse sed nisi lacus sed viverra. Neque viverra justo nec ultrices. Fames ac turpis egestas maecenas pharetra convallis posuere morbi. Risus viverra adipiscing at in. Tristique nulla aliquet enim tortor at auctor urna nunc id. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Tempor orci dapibus ultrices in iaculis. Cras ornare arcu dui vivamus arcu felis. Aenean sed adipiscing diam donec. Faucibus in ornare quam viverra orci sagittis eu. Erat imperdiet sed euismod nisi porta lorem mollis aliquam ut.
+            The main reason why I changed concepts was because everything under the goal alignment was not clear. I was unsure of my target audience; I had a goal, and I could articulate it well enough, but it was still unclear to me, and I was confused on the content I wanted to display and how I wanted to display it. If my goal is unclear, then I could only imagine how bad the user’s experience would be. 
 
 
         </p>
-
+<br>
         <p>
 
-            Diam donec adipiscing tristique risus nec feugiat in fermentum. Massa tempor nec feugiat nisl pretium fusce id velit. Natoque penatibus et magnis dis. Sapien faucibus et molestie ac feugiat sed lectus vestibulum mattis. Dui faucibus in ornare quam. Amet facilisis magna etiam tempor orci eu. Malesuada nunc vel risus commodo viverra. Ut aliquam purus sit amet luctus venenatis. Amet commodo nulla facilisi nullam vehicula. Consectetur adipiscing elit pellentesque habitant. Pretium viverra suspendisse potenti nullam ac tortor vitae purus. Egestas erat imperdiet sed euismod. Molestie at elementum eu facilisis sed odio morbi. Risus quis varius quam quisque id diam vel. Luctus venenatis lectus magna fringilla urna porttitor.
+            Changing concept was the first step to a clear goal. I now know who my target audience is, and I am continuously trying to make a fitting website for that concept. I am planning to make the website denser as the user clicks through it. I will not be placing everything on one webpage, it would be jarring.
         </p>
-
+<br>
         <p>
-            Nam at lectus urna duis convallis convallis. Aliquam sem fringilla ut morbi tincidunt augue interdum. Suspendisse interdum consectetur libero id faucibus nisl tincidunt eget nullam. Purus in mollis nunc sed id. Ullamcorper dignissim cras tincidunt lobortis. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque. Ullamcorper malesuada proin libero nunc. Sem integer vitae justo eget magna. Eget dolor morbi non arcu risus quis varius. Volutpat est velit egestas dui id. Placerat duis ultricies lacus sed turpis. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Dolor sed viverra ipsum nunc aliquet bibendum enim. Placerat vestibulum lectus mauris ultrices eros in. A pellentesque sit amet porttitor eget dolor. Egestas erat imperdiet sed euismod nisi. Aenean euismod elementum nisi quis.
+            Compact information and information that requires you to do an extensive read like the design section and the devblog section, will be placed in a way that is compact. The homepage will have my name on it. The about page will have the ‘About Me’ heading, a short paragraph and a picture of me and I will have the design section following afterwards (it’s title will be ‘Intentions’). The design section will have the content be separated and condensed into squares that will have a short description and a read more button. All the other pages and content will be in the navigation bar.
+        </p>
+<br>
+        <p>
+            The interaction points will mostly consist of buttons and scrolling, as well as hyperlinked resources and images.
         </p>
 
 
