--- a/week3.html
+++ b/week3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zamahayise's Week 1 DevBlog</title>
+    <title>Zamahayise's Week 3 DevBlog</title>
     <link rel="stylesheet" href="devblog.css">
 </head>
 <body>
@@ -32,23 +32,19 @@
     <h1>Week Three</h1>
     <div class="container">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu nisl nunc mi ipsum faucibus vitae aliquet nec. Ligula ullamcorper malesuada proin libero nunc consequat interdum varius. Id eu nisl nunc mi ipsum faucibus. Id diam vel quam elementum. Diam vel quam elementum pulvinar. Pellentesque id nibh tortor id aliquet lectus proin. Feugiat nibh sed pulvinar proin gravida. Massa tincidunt dui ut ornare lectus sit amet est. Nisl vel pretium lectus quam id leo in. Eu consequat ac felis donec et odio pellentesque diam. Neque volutpat ac tincidunt vitae semper quis. Porta lorem mollis aliquam ut porttitor leo. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec.
-
+            I am quite picky when it comes to anything that has to do with aesthetics. I ha an image of how I wanted my website to look but I was conflicted because I wasn’t sure of how I would implement the portfolio aspect. I was thinking of changing the portfolio section of my website to music or changing it overall to a music themed website. I am feeling a bit intimidated by the whole idea of just having a completed website. 
         </p>
-
+<br>
         <p>
-            Nisl pretium fusce id velit ut tortor pretium viverra. At in tellus integer feugiat scelerisque varius morbi. Nec ultrices dui sapien eget mi proin sed libero enim. Ut diam quam nulla porttitor massa. Purus faucibus ornare suspendisse sed nisi lacus sed viverra. Neque viverra justo nec ultrices. Fames ac turpis egestas maecenas pharetra convallis posuere morbi. Risus viverra adipiscing at in. Tristique nulla aliquet enim tortor at auctor urna nunc id. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Tempor orci dapibus ultrices in iaculis. Cras ornare arcu dui vivamus arcu felis. Aenean sed adipiscing diam donec. Faucibus in ornare quam viverra orci sagittis eu. Erat imperdiet sed euismod nisi porta lorem mollis aliquam ut.
-
-
+            While we were learning the basics of CSS, I took the time to look at different portfolio websites to draw inspiration. There were quite a few elements I liked that I wanted to try out on my own website (Linked websites at the bottom of the post). Hopefully, I could try them out on my own, without sacrificing what I have in mind.
         </p>
-
+<br>
         <p>
-
-            Diam donec adipiscing tristique risus nec feugiat in fermentum. Massa tempor nec feugiat nisl pretium fusce id velit. Natoque penatibus et magnis dis. Sapien faucibus et molestie ac feugiat sed lectus vestibulum mattis. Dui faucibus in ornare quam. Amet facilisis magna etiam tempor orci eu. Malesuada nunc vel risus commodo viverra. Ut aliquam purus sit amet luctus venenatis. Amet commodo nulla facilisi nullam vehicula. Consectetur adipiscing elit pellentesque habitant. Pretium viverra suspendisse potenti nullam ac tortor vitae purus. Egestas erat imperdiet sed euismod. Molestie at elementum eu facilisis sed odio morbi. Risus quis varius quam quisque id diam vel. Luctus venenatis lectus magna fringilla urna porttitor.
+            The reading was quite an interesting way to begin with UI and UX. I have had quite an interest with UI and UX and I have been making side comments whenever the useability of an app or game would be jarring. This reading, as well as the lecture were like a knowledge fountain for me. There quite a few things that I hadn’t considered like the idea of users not particularly liking a feature because of how different it is from the norm. Instagram was the first thing that came to mind after watching the lecture. When they moved the notification icon to the upper-right hand corner of the home page from its familiar position and replaced with a shopping icon, it caused havoc. Users, including myself, were irritated at having to adjust just for the next update to change it up. This has been ongoing. The plus sign used to be in the upper-left corner (for quite for some time too) and it has been moving and forth from that position to its current position (as of this update). A lot of engagement on the app has decreased and I believe this is partially why.
         </p>
-
+<br>
         <p>
-            Nam at lectus urna duis convallis convallis. Aliquam sem fringilla ut morbi tincidunt augue interdum. Suspendisse interdum consectetur libero id faucibus nisl tincidunt eget nullam. Purus in mollis nunc sed id. Ullamcorper dignissim cras tincidunt lobortis. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque. Ullamcorper malesuada proin libero nunc. Sem integer vitae justo eget magna. Eget dolor morbi non arcu risus quis varius. Volutpat est velit egestas dui id. Placerat duis ultricies lacus sed turpis. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Dolor sed viverra ipsum nunc aliquet bibendum enim. Placerat vestibulum lectus mauris ultrices eros in. A pellentesque sit amet porttitor eget dolor. Egestas erat imperdiet sed euismod nisi. Aenean euismod elementum nisi quis.
+            I use the supplementary material to better understand and add more knowledge to the pool. The perspectives are drastically different which I think is quite helpful in learning. Its like learning how to solve a sum using one method. If you don’t have different methods under your belt, when you are confronted with a sum that you can’t solve using that <b>one</b> method its quite difficult to overcome it and solve the sum.
         </p>
 
 
