--- a/week4.html
+++ b/week4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zamahayise's Week 1 DevBlog</title>
+    <title>Zamahayise's Week 4 DevBlog</title>
     <link rel="stylesheet" href="devblog.css">
 </head>
 <body>
@@ -29,26 +29,22 @@
 
     </header>
 
-    <h1>Week Four</h1>
+    <h1 class="title">Week Four</h1>
     <div class="container">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu nisl nunc mi ipsum faucibus vitae aliquet nec. Ligula ullamcorper malesuada proin libero nunc consequat interdum varius. Id eu nisl nunc mi ipsum faucibus. Id diam vel quam elementum. Diam vel quam elementum pulvinar. Pellentesque id nibh tortor id aliquet lectus proin. Feugiat nibh sed pulvinar proin gravida. Massa tincidunt dui ut ornare lectus sit amet est. Nisl vel pretium lectus quam id leo in. Eu consequat ac felis donec et odio pellentesque diam. Neque volutpat ac tincidunt vitae semper quis. Porta lorem mollis aliquam ut porttitor leo. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec.
-
+        <p> 
+        I started to visualise my website more clearly by using JustinMind to make a mid-fidelity mockup. I wanted to make sure that the direction I wanted to take wasn’t farfetched. I used Canva as a visualiser. I am an artist at heart, so I needed to see the exact layout of the website. And thankfully, it wasn’t horrific to look at. I had the idea of making the homepage a one-page scroll. The idea looks great on paper but since reading and watching the readings and lectures, I’ve grown quite unconfident in the useability of the website.
         </p>
-
+        <br>
         <p>
-            Nisl pretium fusce id velit ut tortor pretium viverra. At in tellus integer feugiat scelerisque varius morbi. Nec ultrices dui sapien eget mi proin sed libero enim. Ut diam quam nulla porttitor massa. Purus faucibus ornare suspendisse sed nisi lacus sed viverra. Neque viverra justo nec ultrices. Fames ac turpis egestas maecenas pharetra convallis posuere morbi. Risus viverra adipiscing at in. Tristique nulla aliquet enim tortor at auctor urna nunc id. Eget magna fermentum iaculis eu non diam phasellus vestibulum lorem. Tempor orci dapibus ultrices in iaculis. Cras ornare arcu dui vivamus arcu felis. Aenean sed adipiscing diam donec. Faucibus in ornare quam viverra orci sagittis eu. Erat imperdiet sed euismod nisi porta lorem mollis aliquam ut.
-
-
+            The revisions I might need would be the carousel I want to put for the DevBlogs section of my website. My intention is for the information to become denser as the user scrolls down but I fear it may be jarring for the use to move from a home section (with a lot of white space) to a blog page with a lot of reading, even if the posts are placed in cards.
         </p>
-
+        <br>
         <p>
-
-            Diam donec adipiscing tristique risus nec feugiat in fermentum. Massa tempor nec feugiat nisl pretium fusce id velit. Natoque penatibus et magnis dis. Sapien faucibus et molestie ac feugiat sed lectus vestibulum mattis. Dui faucibus in ornare quam. Amet facilisis magna etiam tempor orci eu. Malesuada nunc vel risus commodo viverra. Ut aliquam purus sit amet luctus venenatis. Amet commodo nulla facilisi nullam vehicula. Consectetur adipiscing elit pellentesque habitant. Pretium viverra suspendisse potenti nullam ac tortor vitae purus. Egestas erat imperdiet sed euismod. Molestie at elementum eu facilisis sed odio morbi. Risus quis varius quam quisque id diam vel. Luctus venenatis lectus magna fringilla urna porttitor.
+            Interactivity is quite important in the sphere of UI. There is a direct proportionality between the two. One affects the other. This also brings the question for designers on how their design could affect a user’s experience using the website. If there is too much information to take in, users may be overwhelmed and would not know what they need to look at first.
         </p>
-
+        <br>
         <p>
-            Nam at lectus urna duis convallis convallis. Aliquam sem fringilla ut morbi tincidunt augue interdum. Suspendisse interdum consectetur libero id faucibus nisl tincidunt eget nullam. Purus in mollis nunc sed id. Ullamcorper dignissim cras tincidunt lobortis. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque. Ullamcorper malesuada proin libero nunc. Sem integer vitae justo eget magna. Eget dolor morbi non arcu risus quis varius. Volutpat est velit egestas dui id. Placerat duis ultricies lacus sed turpis. Imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Dolor sed viverra ipsum nunc aliquet bibendum enim. Placerat vestibulum lectus mauris ultrices eros in. A pellentesque sit amet porttitor eget dolor. Egestas erat imperdiet sed euismod nisi. Aenean euismod elementum nisi quis.
+            A good website is determined by user experience and that comes from the user being able to interact with the interface with ease. We need to keep in mind who our target audience is and what they need when designing our websites (Studio by UXPin, 2020).
         </p>
 
 
