--- a/wireframing.html
+++ b/wireframing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zamahayise's Intention</title>
+    <title>Zamahayise's Wireframe and Style Guide</title>
     <link rel="stylesheet" href="intent.css">
     <link rel="stylesheet" href="gallery.css">
     <link rel="stylesheet" href="lightbox.min.css">
