--- a/brainstorming.html
+++ b/brainstorming.html
@@ -22,10 +22,10 @@
             <nav id="main-nav">
             <ul>
                 
-                <li><a href="#home"><b>Home</b></a></li>
-                <li><a href="#about"><b>About</b></a></li>
+                <li><a href="index.html"><b>Home</b></a></li>
+                <li><a href="index.html#about"><b>About</b></a></li>
                 <li><a href="blog.html"><b>Blog</b></a></li> 
-                <li><a href="#intention"><b>Design</b></a></li>
+                <li><a href="index.html#intention"><b>Design</b></a></li>
                <li><a href="essays.html"><b>Essays</b></a></li>  
                <li><a href="portfolio.html"><b>Portfolio</b></a></li>
             
