--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="home">
         <header>
             <div id="logo">
-                <a href="#"><img src="/Images/Black___White_Minimalist_Aesthetic_Initials_Font_Logo-removebg-preview.png" alt="Logo"></a>
+                <a href="#"><img src="/Images/Black___White_Minimalist_Aesthetic_Initials_Font_Logo-removebg-preview (1).png" alt="Logo"></a>
             </div>
             <nav id="main-nav">
                 <ul>
@@ -40,7 +40,7 @@
             </p>
         </div>
         <div class="image">
-            <img src="/Images/D74BD277-52F9-4A32-B311-DB2839F365EF.jpg" height="700px" width="850px">
+            <img src="/Images/D74BD277-52F9-4A32-B311-DB2839F365EF (1).jpg" height="700px" width="850px">
         </div>
     </section>
 
