--- a/week1.html
+++ b/week1.html
@@ -14,7 +14,7 @@
     <header>
         <div id="logo">
         
-            <a href="#"><img src="/Images/Black___White_Minimalist_Aesthetic_Initials_Font_Logo-removebg-preview.png" alt="Logo"></a>
+            <a href="#"><img src="/Images/Black___White_Minimalist_Aesthetic_Initials_Font_Logo-removebg-preview (1).png" alt="Logo"></a>
         </div>
 
             <nav id="main-nav">
