--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </p>
         </div>
         <div class="image">
-            <img src="/Images/D74BD277-52F9-4A32-B311-DB2839F365EF (1).jpg" height="700px" width="850px">
+            <img src="/Images/D74BD277-52F9-4A32-B311-DB2839F365EF (1).jpg" alt="A picture of Zamahayise Hlatshwayo" height="700px" width="850px">
         </div>
     </section>
 
