--- a/Index/index.html
+++ b/Index/index.html
@@ -18,12 +18,12 @@
             </div>
             <nav id="main-nav">
                 <ul>
-                    <li><a href="#home"><b>Home</b></a></li>
-                    <li><a href="#about"><b>About</b></a></li>
-                    <li><a href="blog.html"><b>Blog</b></a></li>
-                    <li><a href="#intention"><b>Design</b></a></li>
-                    <li><a href="/Essays/essays.html"><b>Essays</b></a></li>
-                    <li><a href="/Portfolio/portfolio.html"><b>Portfolio</b></a></li>
+                    <li><a href="/Index/index.html"><b>Home</b></a></li>
+                    <li><a href="/Index/index.html#about"><b>About</b></a></li>
+                    <li><a href="/DevBlog/blog.html"><b>Blog</b></a></li> 
+                    <li><a href="/Index/index.html#intention"><b>Design</b></a></li>
+                   <li><a href="/Essays/essays.html"><b>Essays</b></a></li>  
+                   <li><a href="/Portfolio/portfolio.html"><b>Portfolio</b></a></li>
                 </ul>
             </nav>
         </header>
