--- a/Intentions/updatedwireframe.html
+++ b/Intentions/updatedwireframe.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/Intentions/gallery-.css">
     <link rel="stylesheet" href="/Intentions/lightbox.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="lightbox-plus-jquery.min.js"></script>
+    <script type="text/javascript" src="/Inytentions/lightbox-plus-jquery.min.js"></script>
 </head>
 <body>
     <header>
