--- a/DevBlog/week3.html
+++ b/DevBlog/week3.html
@@ -78,21 +78,20 @@
     
     </div>
     </section>
-    <section id="foot">
-        <footer>
-         <div class="footer-content">
-             <h3><b>Zamahayise Hlatshwayo</b></h3>
-             <em><p>An aspiring developer.</p></em>
-             <ul class="socials">
-                 <li><a href="https://instagram.com/zmhs.02?igshid=OGQ5ZDc2ODk2ZA=="><i class="fa fa-instagram"></i></a></li>
-                 <li><a href="mailto: zamahayise22@gmail.com"><i class="fa fa-envelope"></i></a></li>
-                 <li><a href="https://github.com/zama0210"><i class="fa fa-github"></i></a></li>
-                 <li><a href="https://www.linkedin.com/in/zamahayise-hlatshwayo-4b7ba923a"><i class="fa fa-linkedin"></i></a></li>
-             </ul>
-         </div>
-     </section>
-     </footer>
- 
+</main><section id="foot">
+    <footer>
+     <div class="footer-content">
+         <h3><b>Zamahayise Hlatshwayo</b></h3>
+         <em><p>An aspiring developer.</p></em>
+         <ul class="socials">
+             <li><a href="https://instagram.com/zmhs.02?igshid=OGQ5ZDc2ODk2ZA=="><i class="fa fa-instagram"></i></a></li>
+             <li><a href="mailto: zamahayise22@gmail.com"><i class="fa fa-envelope"></i></a></li>
+             <li><a href="https://github.com/zama0210"><i class="fa fa-github"></i></a></li>
+             <li><a href="https://www.linkedin.com/in/zamahayise-hlatshwayo-4b7ba923a"><i class="fa fa-linkedin"></i></a></li>
+         </ul>
+     </div>
+ </footer>
+</section>
 
     
 </body>
