--- a/DevBlog/week13.html
+++ b/DevBlog/week13.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zamahayise's Week 13 DevBlog</title>
-    <link rel="stylesheet" href="devblog.css">
-    <script src="footer.js"></script>
+    <link rel="stylesheet" href="/DevBlog/devblog.css">
+    <script src="/Index/footer.js"></script>
+    <script src="/Index/navigation.js"></script>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
