--- a/Essays/essay2.html
+++ b/Essays/essay2.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zamahayise's Second Essay</title>
     <link rel="stylesheet" href="/Essays/essays.css">
+    <script src="/Index/footer.js"></script>
+    <script src="/Index/navigation.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
