--- a/Portfolio/portfolio1.html
+++ b/Portfolio/portfolio1.html
@@ -7,8 +7,10 @@
     <title>Zamahayise's Portfolio 1</title>
     <link rel="stylesheet" href="/Portfolio/portfolio.css">
     <link rel="stylesheet" href="/Portfolio/portfolio1.css">
+    <script src="/Index/footer.js"></script>
+    <script src="/Index/navigation.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="portfolio1.js"></script>
+    <script src="/Portfolio/portfolio1.js"></script>
 
 
 </head>
