--- a/DevBlog/week1.html
+++ b/DevBlog/week1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zamahayise's Week 1 DevBlog</title>
-    <link rel="stylesheet" href="devblog.css">
+    <link rel="stylesheet" href="/DevBlog/devblog.css">
     <script src="footer.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -30,6 +30,8 @@
         </nav>
 
     </header>
+
+    <main>
 
     <section id="super">
     <div class="hero-image">
@@ -60,7 +62,7 @@
 
     
 
-  
+  </main>
 
 
 
