--- a/DevBlog/week2.html
+++ b/DevBlog/week2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zamahayise's Week 2 DevBlog</title>
-    <link rel="stylesheet" href="devblog.css">
+    <link rel="stylesheet" href="/DevBlog/devblog.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -19,13 +19,12 @@
             <nav id="main-nav">
             <ul>
                 
-                <li><a href="index.html"><b>Home</b></a></li>
-                <li><a href="index.html#about"><b>About</b></a></li>
-                <li><a href="blog.html"><b>Blog</b></a></li> 
-                <li><a href="index.html#intention"><b>Design</b></a></li>
-               <li><a href="essays.html"><b>Essays</b></a></li>  
-               <li><a href="portfolio.html"><b>Portfolio</b></a></li>
-            
+                <li><a href="/Index/index.html"><b>Home</b></a></li>
+                <li><a href="/Index/index.html#about"><b>About</b></a></li>
+                <li><a href="/DevBlog/blog.html"><b>Blog</b></a></li> 
+                <li><a href="/Index/index.html#intention"><b>Design</b></a></li>
+               <li><a href="/Essays/essays.html"><b>Essays</b></a></li>  
+               <li><a href="/Portfolio/portfolio.html"><b>Portfolio</b></a></li>
             </ul>
         </nav>
 
