--- a/Index/index.html
+++ b/Index/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zamahayise Hlatshwayo</title>
     <link rel="stylesheet" href="/Index/style.css">
+    <script src="/Index/footer.js"></script>
+    <script src="/Index/navigation.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
