--- a/Index/index.html
+++ b/Index/index.html
@@ -76,7 +76,7 @@
             <div class="card">
                 <div class="card-content">
                     <h5 class="card-heading">Updated Wireframes</h5>
-                    <p class="card-frame">A deep dive into the wireframes created and the choices made to bring the wireframes to life.</p>
+                    <p class="card-frame">A deep dive into the new wireframes created and the choices made to bring the wireframes to life.</p>
                     <a href="/Intentions/updatedwireframe.html" class="button">Read More</a>
                 </div>
             </div>
