--- a/DevBlog/week8.html
+++ b/DevBlog/week8.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zamahayise's Week 8 DevBlog</title>
     <link rel="stylesheet" href="/DevBlog/devblog.css">
-    <script src="footer.js"></script>
+    <script src="/Home/footer.js"></script>
+    <script src="/Home/navigation.js"></script>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -20,10 +22,10 @@
             <nav id="main-nav">
             <ul>
                 
-                <li><a href="/Index/index.html"><b>Home</b></a></li>
-                <li><a href="/Index/index.html#about"><b>About</b></a></li>
+                <li><a href="/Home/index.html"><b>Home</b></a></li>
+                <li><a href="/Home/index.html#about"><b>About</b></a></li>
                 <li><a href="/DevBlog/blog.html"><b>Blog</b></a></li> 
-                <li><a href="/Index/index.html#intention"><b>Design</b></a></li>
+                <li><a href="/Home/index.html#intention"><b>Design</b></a></li>
                <li><a href="/Essays/essays.html"><b>Essays</b></a></li>  
                <li><a href="/Portfolio/portfolio.html"><b>Portfolio</b></a></li>
             
