--- a/Essays/essays.html
+++ b/Essays/essays.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zamahayise's Essays</title>
     <link rel="stylesheet" href="/Essays/essays.css">
-    <script src="/Index/footer.js"></script>
-    <script src="/Index/navigation.js"></script>
+    <script src="/Home/footer.js"></script>
+    <script src="/Home/navigation.js"></script>
 
 
 </head>
@@ -21,10 +21,10 @@
 
             <nav id="main-nav">
             <ul>
-                <li><a href="/Index/index.html"><b>Home</b></a></li>
-                <li><a href="/Index/index.html#about"><b>About</b></a></li>
+                <li><a href="/Home/index.html"><b>Home</b></a></li>
+                <li><a href="/Home/index.html#about"><b>About</b></a></li>
                 <li><a href="/DevBlog/blog.html"><b>Blog</b></a></li> 
-                <li><a href="/Index/index.html#intention"><b>Design</b></a></li>
+                <li><a href="/Home/index.html#intention"><b>Design</b></a></li>
                <li><a href="/Essays/essays.html"><b>Essays</b></a></li>  
                <li><a href="/Portfolio/portfolio.html"><b>Portfolio</b></a></li>
             </ul>
