--- a/Home/index.html
+++ b/Home/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zamahayise Hlatshwayo</title>
-    <link rel="stylesheet" href="/Index/style.css">
-    <script src="/Index/footer.js"></script>
-    <script src="/Index/navigation.js"></script>
+    <link rel="stylesheet" href="/Home/style.css">
+    <script src="/Home/footer.js"></script>
+    <script src="/Home/navigation.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -20,10 +20,10 @@
             </div>
             <nav id="main-nav">
                 <ul>
-                    <li><a href="/Index/index.html"><b>Home</b></a></li>
-                    <li><a href="/Index/index.html#about"><b>About</b></a></li>
+                    <li><a href="/Home/index.html"><b>Home</b></a></li>
+                    <li><a href="/Home/index.html#about"><b>About</b></a></li>
                     <li><a href="/DevBlog/blog.html"><b>Blog</b></a></li> 
-                    <li><a href="/Index/index.html#intention"><b>Design</b></a></li>
+                    <li><a href="/Home/index.html#intention"><b>Design</b></a></li>
                    <li><a href="/Essays/essays.html"><b>Essays</b></a></li>  
                    <li><a href="/Portfolio/portfolio.html"><b>Portfolio</b></a></li>
                 </ul>
