--- a/Intentions/updatedwireframe.html
+++ b/Intentions/updatedwireframe.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/Intentions/intent.css">
     <link rel="stylesheet" href="/Intentions/gallery-.css">
     <link rel="stylesheet" href="/Intentions/lightbox.min.css">
+    <script src="/Home/footer.js"></script>
+    <script src="/Home/navigation.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="/Inytentions/lightbox-plus-jquery.min.js"></script>
 </head>
@@ -20,12 +22,12 @@
 
             <nav id="main-nav">
             <ul>
-                <li><a href="/Index/index.html"><b>Home</b></a></li>
-                <li><a href="/Index/index.html#about"><b>About</b></a></li>
-                <li><a href="/DevBlog/blog.html"><b>Blog</b></a></li> 
-                <li><a href="/Index/index.html#intention"><b>Design</b></a></li>
-               <li><a href="/Essays/essays.html"><b>Essays</b></a></li>  
-               <li><a href="/Portfolio/portfolio.html"><b>Portfolio</b></a></li>
+                <li><a href="/Home/index.html"><b>Home</b></a></li>
+                    <li><a href="/Home/index.html#about"><b>About</b></a></li>
+                    <li><a href="/DevBlog/blog.html"><b>Blog</b></a></li> 
+                    <li><a href="/Home/index.html#intention"><b>Design</b></a></li>
+                   <li><a href="/Essays/essays.html"><b>Essays</b></a></li>  
+                   <li><a href="/Portfolio/portfolio.html"><b>Portfolio</b></a></li>
             
             </ul>
         </nav>
