--- a/Portfolio/portfolio1.html
+++ b/Portfolio/portfolio1.html
@@ -7,8 +7,8 @@
     <title>Zamahayise's Portfolio 1</title>
     <link rel="stylesheet" href="/Portfolio/portfolio.css">
     <link rel="stylesheet" href="/Portfolio/portfolio1.css">
-    <script src="/Index/footer.js"></script>
-    <script src="/Index/navigation.js"></script>
+    <script src="/Home/footer.js"></script>
+    <script src="/Home/navigation.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="/Portfolio/portfolio1.js"></script>
 
@@ -24,10 +24,10 @@
             <nav id="main-nav">
             <ul>
                 
-                <li><a href="/Index/index.html"><b>Home</b></a></li>
-                <li><a href="/Index/index.html#about"><b>About</b></a></li>
+                <li><a href="/Home/index.html"><b>Home</b></a></li>
+                <li><a href="/Home/index.html#about"><b>About</b></a></li>
                 <li><a href="/DevBlog/blog.html"><b>Blog</b></a></li> 
-                <li><a href="/Index/index.html#intention"><b>Design</b></a></li>
+                <li><a href="/Home/index.html#intention"><b>Design</b></a></li>
                <li><a href="/Essays/essays.html"><b>Essays</b></a></li>  
                <li><a href="/Portfolio/portfolio.html"><b>Portfolio</b></a></li>
             
