--- a/DevBlog/week10.html
+++ b/DevBlog/week10.html
@@ -20,14 +20,13 @@
 
             <nav id="main-nav">
             <ul>
-                
-                <li><a href="/Home/index.html"><b>Home</b></a></li>
-                <li><a href="/Home/index.html#about"><b>About</b></a></li>
+                <li><a href="index.html"><b>Home</b></a></li>
+                <li><a href="index.html#about"><b>About</b></a></li>
                 <li><a href="/DevBlog/blog.html"><b>Blog</b></a></li> 
-                <li><a href="/Home/index.html#intention"><b>Design</b></a></li>
+                <li><a href="index.html#intention"><b>Design</b></a></li>
                <li><a href="/Essays/essays.html"><b>Essays</b></a></li>  
                <li><a href="/Portfolio/portfolio.html"><b>Portfolio</b></a></li>
-            </ul>
+                
         </nav>
 
     </header>
