--- a/brainstorming.html
+++ b/brainstorming.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zamahayise's Brainstorming</title>
-    <link rel="stylesheet" href="/Intentions/intent.css">
-    <link rel="stylesheet" href="/Intentions/gallery-.css">
-    <link rel="stylesheet" href="/Intentions/lightbox.min.css">
-    <script src="/Home/footer.js"></script>
-    <script src="/Home/navigation.js"></script>
+    <link rel="stylesheet" href="intent.css">
+    <link rel="stylesheet" href="gallery-.css">
+    <link rel="stylesheet" href="lightbox.min.css">
+    <script src="footer.js"></script>
+    <script src= "navigation.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="lightbox-plus-jquery.min.js"></script>
 </head>
@@ -24,11 +24,10 @@
             <ul>
                 <li><a href="index.html"><b>Home</b></a></li>
                 <li><a href="index.html#about"><b>About</b></a></li>
-                <li><a href="/DevBlog/blog.html"><b>Blog</b></a></li> 
+                <li><a href="blog.html"><b>Blog</b></a></li> 
                 <li><a href="index.html#intention"><b>Design</b></a></li>
-               <li><a href="/Essays/essays.html"><b>Essays</b></a></li>  
-               <li><a href="/Portfolio/portfolio.html"><b>Portfolio</b></a></li>
-            
+               <li><a href="essays.html"><b>Essays</b></a></li>  
+               <li><a href="portfolio.html"><b>Portfolio</b></a></li>
             </ul>
         </nav>
 
