--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="card-content">
                         <h5 class="card-heading">Brainstorming and Inspiration</h5>
                         <p class="card-frame">All the inspiration and ideas I had originally for the website</p>
-                        <a href="/Intentions/brainstorming.html" class="button">Read More</a>
+                        <a href="brainstorming.html" class="button">Read More</a>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                     <div class="card-content">
                         <h5 class="card-heading">Wireframing and Style Guides</h5>
                         <p class="card-frame">A deep dive into the wireframes created and the choices made to bring the wireframes to life.</p>
-                        <a href="/Intentions/wireframing.html" class="button">Read More</a>
+                        <a href="wireframing.html" class="button">Read More</a>
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                 <div class="card-content">
                     <h5 class="card-heading">Updated Wireframes</h5>
                     <p class="card-frame">A deep dive into the new wireframes created and the choices made to bring the wireframes to life.</p>
-                    <a href="/Intentions/updatedwireframe.html" class="button">Read More</a>
+                    <a href="updatedwireframe.html" class="button">Read More</a>
                 </div>
             </div>
         </div>
