--- a/portfolio1.html
+++ b/portfolio1.html
@@ -18,7 +18,7 @@
     <header>
         <div id="logo">
         
-            <a href="#"><img src="/Images/Black___White_Minimalist_Aesthetic_Initials_Font_Logo-removebg-preview (1).png" alt="Logo"></a>
+            <a href="index.html"><img src="/Images/Black___White_Minimalist_Aesthetic_Initials_Font_Logo-removebg-preview (1).png" alt="Logo"></a>
         </div>
 
             <nav id="main-nav">
