--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="home">
         <header>
             <div id="logo">
-                <a href="#"><img src="/Images/Black___White_Minimalist_Aesthetic_Initials_Font_Logo-removebg-preview (1).png" alt="Logo"></a>
+                <a href="index.html"><img src="/Images/Black___White_Minimalist_Aesthetic_Initials_Font_Logo-removebg-preview (1).png" alt="Logo"></a>
             </div>
             <nav id="main-nav">
                 <ul>
